loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pytonweb-lb
spec:
  type: LoadBalancer
  selector:
    app: pythonweb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
