node-port.yml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: pythonweb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
