node-port_svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: py-web-service
spec:
  type: NodePort
  selector:
    app: pythonweb
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
