ingress_lb.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world-python-web.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 8080
